stryker/force-app/main/default/objects/Project__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>project</relationshipName>
    <type>Lookup</type>
</CustomField>