stryker/force-app/main/default/objects/Project__c/fields/Annual_revinue__c.field-meta.xml
<CustomField>
    <fullName>Annual_revinue__c</fullName>
    <label>Annual revinue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>