stryker/force-app/main/default/objects/Project__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>Applied Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>