stryker/force-app/main/default/objects/Project__c/fields/current_Address__c.field-meta.xml
<CustomField>
    <fullName>current_Address__c</fullName>
    <label>current Address</label>
    <type>TextArea</type>
</CustomField>