stryker/force-app/main/default/objects/Project__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>project</relationshipLabel>
    <relationshipName>project</relationshipName>
    <type>Lookup</type>
</CustomField>