stryker/force-app/main/default/objects/Project__c/fields/loan_type__c.field-meta.xml
<CustomField>
    <fullName>loan_type__c</fullName>
    <label>loan type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>education</fullName>
            </value>
            <value>
                <fullName>housing</fullName>
            </value>
            <value>
                <fullName>vehical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>