stryker/force-app/main/default/objects/Project__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <inlineHelpText>``</inlineHelpText>
    <label>phone</label>
    <type>Phone</type>
</CustomField>