stryker/force-app/main/default/objects/Project__c/validationRules/Applied_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Applied_Amount</fullName>
    <active>true</active>
    <description>Applied_Amount can&#39;t be less then 50 k.</description>
    <errorConditionFormula>App__c  &lt; 50000</errorConditionFormula>
    <errorDisplayField>App__c</errorDisplayField>
    <errorMessage>Applied Amount Can not be Less Then 50000</errorMessage>
</ValidationRule>