stryker/force-app/main/default/objects/Project__c/validationRules/Educarion.validationRule-meta.xml
<ValidationRule>
    <fullName>Educarion</fullName>
    <active>true</active>
    <description>If Loan type Education then Applied Amount can not be less then 100000</description>
    <errorConditionFormula>AND(
     ISPICKVAL( loan_type__c ,&#39;education&#39;),
      App__c &lt;20000
)</errorConditionFormula>
    <errorDisplayField>loan_type__c</errorDisplayField>
    <errorMessage>Applied amount grater then 20000.</errorMessage>
</ValidationRule>