stryker/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>phone__c</columns>
    <columns>email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>